criado classe generica, implementações do repository e movido classe response